--- a/src/main/resources/static/result.html
+++ b/src/main/resources/static/result.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Google Clone Search Result</title>
     <link rel="stylesheet" href="result.css" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
